--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <html lang="en">
   <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/pwa-192x192.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>Productivity Tracker</title>
 
   <!-- PWA Tags -->
   <meta name="theme-color" content="#ffffff">
