--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   <!-- PWA Tags -->
   <meta name="theme-color" content="#ffffff">
   <link rel="manifest" href="/manifest.webmanifest" />
+
+  <!-- iOS-specific PWA tags -->
+  <link rel="apple-touch-icon" href="/pwa-192x192.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="ProdTrack">
+
 </head>
   <body>
     <div id="root"></div>
